Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/switchexpr/BooleanNumericNonNumeric.out
BooleanNumericNonNumeric.java:11:20: compiler.err.operator.cant.be.applied.1: +, int, boolean
BooleanNumericNonNumeric.java:19:15: compiler.err.cant.deref: int
2 errors
